2006-02-16  Kevin Till <ktill@zmanda.com>
	* example/amanda.conf.in: dumptype option is "encrypt"
	* man/xml-source/amanda.conf.5.xml: ditto
	* server-src/holding.c: util.h is include'd twice
	* common-src/ssh-security.c: set correct debug print 

2006-02-10  Kevin Till <ktill@zmanda.com>
	* man/xml-source/amanda.8.xml: replace informaltable with literallayout 

2006-02-13  John Franks <jrfranks@zmanda.com>
 	* server-src/driver.c: Pring a more precise message when taper
	  returns an error.  Include error message from taper in log.
	  Print out "protocol error" if taper returns a bogus command.

2006-02-10  Kevin Till <ktill@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: add note about first character of a 
			tapetype string must be alphabet

2006-02-10  John Franks <jrfranks@zmanda.com>
 	* server-src/taper.c: Call error() if an invalid string is read
 	  by syncpipe_getstr().
 
2006-02-09  John Franks <jrfranks@zmanda.com>
 	* Makefile.am, */Makefile.am:  Corrections generated by David Braun
 	  dustybird@users.sourceforge.net to properly set source directories
 	  for remote (VPATH) builds.
 	* man/Makefile.am:  Fixed man page builds to use proper source and
 	  build paths.
 	* autogen: Force rebuilding everything and print only syntax errors.
 	  (Errors are seen occasionally in system autogen files...)
	* configure.in: Eliminate possibility of empty string in shell tests.
 	  fix quoting of '[' and ']' characters in help messages.
 	  Fix default value for DUMPER_DIR to pick up EPREFIX correctly.
 
2006-02-08  Ian Turner <ian@zmanda.com>
	* server-src/driver.c (handle_taper_result): Properly handle 
	  SPLIT_NEEDNEXT case. Thanks to Josef Wolf for finding this bug.
	  Also reindent.

2006-02-06 Kevin Till <ktill@zmanda.com> 
	* restore-src/restore.c: fix comment formatting on version 1.2.1

2006-02-06 Kevin Till <ktill@zmanda.com>
	* configure.in: Bug 1423731, SSH_SECURITY set only when --with-ssh-security used