@@ -1,3 +1,8 @@
+2006-02-20  Kevin Till <ktill@zmanda.com>
+	* common-src/krb4-security.c: changes needed for krb4/5 to compile. Thanks to
+				      Orion Poplawski.
+	* common-src/krb5-security.c: ditto.
+
 2006-02-16  Kevin Till <ktill@zmanda.com>
 	* example/amanda.conf.in: dumptype option is "encrypt"
 	* man/xml-source/amanda.conf.5.xml: ditto
